Revert "v23.06.22 (in progress)"
This reverts commit bdae5fe61eb5ddd7790cc9b798b3cb453305732f.

--- a/Bin32/Solution1/CryGame/Profile/BuildLog.htm
+++ b/Bin32/Solution1/CryGame/Profile/BuildLog.htm
@@ -11,13 +11,13 @@ Build Log
 </h3>
 </pre></table><table width=100% bgcolor=#DFDFE5><tr><td><font face=arial size=+2>
 Command Lines
-</font></table><table width=* cellspacing=0 cellpadding=0><tr><td width=0 bgcolor=#EDEDF5>&nbsp;</td><td width=0 bgcolor=#FFFFFF>&nbsp;</td><td width=*><pre>Creating temporary file "d:\Games\Far Cry\Mods\Mp\Bin32\Solution1\CryGame\Profile\RSP000008.rsp" with contents
+</font></table><table width=* cellspacing=0 cellpadding=0><tr><td width=0 bgcolor=#EDEDF5>&nbsp;</td><td width=0 bgcolor=#FFFFFF>&nbsp;</td><td width=*><pre>Creating temporary file "d:\Games\Far Cry\Mods\Mp\Bin32\Solution1\CryGame\Profile\RSP000001.rsp" with contents
 [
 /Ox /Og /Ob2 /Oi /Os /Oy /G6 /I "..\BinkSDK" /I "..\CryCommon" /D "NDEBUG" /D "USE_GAME_DLL" /D "WIN32" /D "_WINDOWS" /D "_USRDLL" /D "CRYGAME_EXPORTS" /D "_WINDLL" /D "_MBCS" /GF /FD /EHsc /MD /Yu"stdafx.h" /Fp".\Profile/CryGame.pch" /Fo".\Profile/" /Fd".\Profile/" /W3 /c /Zi
-".\Game.cpp"
+".\XPlayer.cpp"
 ]
-Creating command line "cl.exe @"d:\Games\Far Cry\Mods\Mp\Bin32\Solution1\CryGame\Profile\RSP000008.rsp" /nologo"
-Creating temporary file "d:\Games\Far Cry\Mods\Mp\Bin32\Solution1\CryGame\Profile\RSP000009.rsp" with contents
+Creating command line "cl.exe @"d:\Games\Far Cry\Mods\Mp\Bin32\Solution1\CryGame\Profile\RSP000001.rsp" /nologo"
+Creating temporary file "d:\Games\Far Cry\Mods\Mp\Bin32\Solution1\CryGame\Profile\RSP000002.rsp" with contents
 [
 /OUT:"D:\Games\Far Cry\Mods\MP\Bin32/CryGame.dll" /INCREMENTAL:NO /NOLOGO /LIBPATH:"..\BinkSDK" /LIBPATH:"..\CryNetwork\Release" /LIBPATH:".\..\ubisoft.com\GSServices\sdks/gs-sdk-regserver/lib_win32" /LIBPATH:".\..\ubisoft.com\GSServices\sdks/gs-sdk-msclient/lib_win32" /LIBPATH:".\..\ubisoft.com\GSServices\sdks/gs-sdk-result/lib_win32" /LIBPATH:".\..\ubisoft.com\GSServices\sdks/gs-sdk-cdkey/lib_win32" /LIBPATH:".\..\ubisoft.com\GSServices\sdks/gs-sdk-common/lib_win32" /LIBPATH:".\..\ubisoft.com\GSServices\sdks/gs-sdk-base/lib_win32" /DLL /DEBUG /PDB:"D:\Games\Far Cry\Mods\MP\Bin32/CryGame.pdb" /MAP /BASE:"0x33000000" /MACHINE:I386 /OPT:ref,icf Shlwapi.lib wininet.lib Ws2_32.lib kernel32.lib user32.lib gdi32.lib winspool.lib comdlg32.lib advapi32.lib shell32.lib ole32.lib oleaut32.lib uuid.lib odbc32.lib odbccp32.lib
 ".\Profile\CryGame.obj"
@@ -112,11 +112,11 @@ Creating temporary file "d:\Games\Far Cry\Mods\Mp\Bin32\Solution1\CryGame\Profil
 ".\Profile\GameLoading.obj"
 ".\Profile\Synched2DTable.obj"
 ]
-Creating command line "link.exe @"d:\Games\Far Cry\Mods\Mp\Bin32\Solution1\CryGame\Profile\RSP000009.rsp""
+Creating command line "link.exe @"d:\Games\Far Cry\Mods\Mp\Bin32\Solution1\CryGame\Profile\RSP000002.rsp""
 </pre></table><table width=100% bgcolor=#DFDFE5><tr><td><font face=arial size=+2>
 Output Window
 </font></table><table width=* cellspacing=0 cellpadding=0><tr><td width=0 bgcolor=#EDEDF5>&nbsp;</td><td width=0 bgcolor=#FFFFFF>&nbsp;</td><td width=*><pre>Compiling...
-Game.cpp
+XPlayer.cpp
 Linking...
    Creating library D:\Games\Far Cry\Mods\MP\Bin32/CryGame.lib and object D:\Games\Far Cry\Mods\MP\Bin32/CryGame.exp
 </pre></table><table width=100% bgcolor=#DFDFE5><tr><td><font face=arial size=+2>
